--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,12 +1,11 @@
 spring:
-  profiles:
-    active: local
   datasource:
     url: jdbc:h2:tcp://localhost/~/querydsl
     username: sa
     password:
     driver-class-name: org.h2.Driver
-
+  profiles:
+    active:test
 
   jpa:
     hibernate:
